--- a/content/posts/2015-10-07-jsdc-2015-day-2.md
+++ b/content/posts/2015-10-07-jsdc-2015-day-2.md
@@ -8,7 +8,8 @@ tags:
   - jsdc
   - conference
 ---
->本文延續 [Day 1](/2015/10/05/jsdc-2015-day-1/)
+
+> 本文延續 [Day 1](/2015/10/05/jsdc-2015-day-1/)
 
 第一天結束之後，晚上我去淡水我朋友借住一天。淡水跟南港展覽館格有夠遠...來回要一個小時多，所以二天早上八點出發，到會場已經九點半了，導致我第一個 topic 完全沒聽到，虧大了！
 
@@ -29,49 +30,47 @@ tags:
 使用 React Native 可以開發 native 的 app，但也可以結合至原有的 native app！講者先說明 React Native 的運作原理後，在講述自己將 React Native 整合至原本 native app 中。
 
 React Native 運作原理：
-{% asset_img 01.png %}
+![Imgur](https://i.imgur.com/UhOvrhv.png)
 
-Demo 的時候講者在修改程式碼時，iOS app 也會跟著 live reloading，相當厲害！而且同樣的程式碼也能同時應用在 Android app！不過講者有提到，如果要銜接原生 app 的功能的話，必須會寫 Objective-C / Java 的原生 app，所以講者一直提到他叫原廠幫他修改原生的地方XD。
+Demo 的時候講者在修改程式碼時，iOS app 也會跟著 live reloading，相當厲害！而且同樣的程式碼也能同時應用在 Android app！不過講者有提到，如果要銜接原生 app 的功能的話，必須會寫 Objective-C / Java 的原生 app，所以講者一直提到他叫原廠幫他修改原生的地方 XD。
 
 個人覺得 React 開始在侵略整個世界了，等到未來趨近於穩定的時候，一定會有更多人投入這部分的開發，畢竟 React 的初衷就是：
 
->Learn once, write anywhere.
+> Learn once, write anywhere.
 
-會了 React，可以同時開發 Web 及 App，何樂而不為呢XD
+會了 React，可以同時開發 Web 及 App，何樂而不為呢 XD
 
 ###### Workshop on Control Flow w/ ES2015 and beyond.
 
-講者是 [koa.js](https://github.com/koajs/koa) 及 [co](https://github.com/tj/co) 的作者 [Jonathon](https://github.com/jonathanong)，講題是在說 ES2015 的控制流程，主要都是在講 JavaScript 的非同步機制及解決方法。講者很細心整理了在開發 node.js 時常遇到的一些問題，跟對應的解決方案，最讓我感興趣的就是 ES2016 的 `async` 及 `await`，但是現在好像沒有很完整的實作。在簡報結束後時間好像剩我滿多的，所以都變成 Q&A 的時間，會眾問了不少問題，然後從講者身上挖到不少經驗及常用的工具或套件XD，我覺得最好笑的就是有個會眾問：
+講者是 [koa.js](https://github.com/koajs/koa) 及 [co](https://github.com/tj/co) 的作者 [Jonathon](https://github.com/jonathanong)，講題是在說 ES2015 的控制流程，主要都是在講 JavaScript 的非同步機制及解決方法。講者很細心整理了在開發 node.js 時常遇到的一些問題，跟對應的解決方案，最讓我感興趣的就是 ES2016 的 `async` 及 `await`，但是現在好像沒有很完整的實作。在簡報結束後時間好像剩我滿多的，所以都變成 Q&A 的時間，會眾問了不少問題，然後從講者身上挖到不少經驗及常用的工具或套件 XD，我覺得最好笑的就是有個會眾問：
 
-{% blockquote Jonathon, JSDC 2015 %}
-Q:「Do you have any good way to determine a callback function is a asynchronous callback?」
-
-「No. It sucks!」
-{% endblockquote %}
+> Q:「Do you have any good way to determine a callback function is a asynchronous callback?」
+>
+> 「No. It sucks!」- Jonathon, JSDC 2015
 
 ###### Building Hybrid Mobile Apps with Ionic Framework and AngularJS
 
-其實這場只是因為想聽下場的講題，怕去 R2 回來就沒位置了，所以都在做自己的事XD。以前我寫過 AngularJS 一陣子，後來發現 React 後就轉投入 React 的懷抱了。其實在 React Native 或 NativeScript 等等，用於產生 native app 的作法前，使用 AngularJS 這種框架來建立 Hybrid app 是其中一種使用非原生語言開發 app 主流，使用 codova（PhoneGap）或是 ionic 來建立。
+其實這場只是因為想聽下場的講題，怕去 R2 回來就沒位置了，所以都在做自己的事 XD。以前我寫過 AngularJS 一陣子，後來發現 React 後就轉投入 React 的懷抱了。其實在 React Native 或 NativeScript 等等，用於產生 native app 的作法前，使用 AngularJS 這種框架來建立 Hybrid app 是其中一種使用非原生語言開發 app 主流，使用 codova（PhoneGap）或是 ionic 來建立。
 
 但是這種作法一直令人詬病的就是效能問題，因為基底就是 Web，而行動裝置的效能本身就不如一般的電腦，所以在使用上的 UX 相當的不好。但是講者有提到目前的行動裝置效能日漸提升，或許未來也會有 Hybrid app 的一片天呢。
 
 ###### React Test and Material Design Lite + React？
 
-講者 xpsteven 之前在 React.tw 發佈他們的 mdl-react 的時候我就關注他了XD，感覺是個思維相當新的人。在這個 topic 他分享了測試的辛酸史，前前後後失敗了四次之有，跟國父革命有得拼！講者的結論就是直接做 UI 的 E2E test 就好，還有能花「錢」解決就花下去，效益比較好，接著最後就做了 live demo。
+講者 xpsteven 之前在 React.tw 發佈他們的 mdl-react 的時候我就關注他了 XD，感覺是個思維相當新的人。在這個 topic 他分享了測試的辛酸史，前前後後失敗了四次之有，跟國父革命有得拼！講者的結論就是直接做 UI 的 E2E test 就好，還有能花「錢」解決就花下去，效益比較好，接著最後就做了 live demo。
 
-其實我一直在 Unit test 跟 E2E test 間做比較，我個人認為 Unit test 是首要完成的測試，因為 E2E test 是在測試的頂層，一般來說會比 Unit test 難處理，不過講者的結論也讓我想想是不是有這麼一回事，或許 E2E 才是會好解決的測試方案呢XD。
+其實我一直在 Unit test 跟 E2E test 間做比較，我個人認為 Unit test 是首要完成的測試，因為 E2E test 是在測試的頂層，一般來說會比 Unit test 難處理，不過講者的結論也讓我想想是不是有這麼一回事，或許 E2E 才是會好解決的測試方案呢 XD。
 
 ![](http://2.bp.blogspot.com/-X__Rsznxdg4/TzPVWfte5ZI/AAAAAAAAAD0/Y1dWLNEW4zI/s1600/img1.jpg)
 
 最後獻上講者的上班攻防經驗：
-{% blockquote Xpsteven, JSDC 2015 %}
-寫測試是一種防禦，避免同事做的蠢事害自己加班。
-提交 Bug Issue 是一種攻擊，讓同事加班 LOL。
-{% endblockquote %}
+
+> 寫測試是一種防禦，避免同事做的蠢事害自己加班。提交 Bug Issue 是一種攻擊，讓同事加班 LOL。
+>
+> - Xpsteven, JSDC 2015
 
 ### Lighting Talk
 
-印象最深刻的就是[鄉民查水表](https://chrome.google.com/webstore/detail/%E9%84%89%E6%B0%91%E6%9F%A5%E6%B0%B4%E8%A1%A8/kdcgipkhkbeipbooplfcdgclhecfngfi?hl=zh-TW)跟 [MRT Express](http://mrt.express/)，後者還說他達成了大台北捷運1XX站抵達的成就XD。
+印象最深刻的就是[鄉民查水表](https://chrome.google.com/webstore/detail/%E9%84%89%E6%B0%91%E6%9F%A5%E6%B0%B4%E8%A1%A8/kdcgipkhkbeipbooplfcdgclhecfngfi?hl=zh-TW)跟 [MRT Express](http://mrt.express/)，後者還說他達成了大台北捷運 1XX 站抵達的成就 XD。
 
 ### 後記
 
